--- a/new_results.less
+++ b/new_results.less
@@ -20,6 +20,10 @@
 //== Colors
 //
 //## Gray and brand colors for use across Bootstrap.
+#avg_class {
+  color: #fdd400;
+}
+
 @gray-base : #000;
 @gray-darker : lighten(@gray-base, 13.5%); // #222
 @gray-dark : lighten(@gray-base, 20%); // #333
